--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -89,6 +89,9 @@
     @media only screen and (max-width: $bp-small) {
       font-size: 5.5rem;
     }
+    @media only screen and (max-width: $bp-xsSmall) {
+      font-size: 5rem;
+    }
   }
 
   &__brought {
@@ -104,7 +107,10 @@
     }
 
     @media only screen and (max-width: $bp-small) {
-      font-size: 5rem;
+      font-size: 5.5rem;
+    }
+    @media only screen and (max-width: $bp-xsSmall) {
+      font-size: 4.4rem;
     }
   }
 
