--- a/css/style.css
+++ b/css/style.css
@@ -151,43 +151,28 @@ a {
     height: 4.5rem;
     align-self: center;
     justify-self: center;
-    margin-right: 4rem; }
+    margin-right: 4rem;
+    background: #f84525;
+    box-shadow: 0px 0px 0 4px #f84525;
+    padding: 3px 2px 1px 4px; }
     @media only screen and (max-width: 50em) {
       .header__logo {
         justify-self: start;
         align-self: start; } }
-  .header__sidebar {
-    grid-row: 2/ 10;
-    grid-column: 1 / 2;
-    align-self: center;
-    transform: rotate(90deg);
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    font-size: 1.3rem;
-    color: #000;
-    opacity: 0.8;
-    width: 120px;
-    justify-self: start;
-    margin-left: -14px; }
-    @media only screen and (max-width: 50em) {
-      .header__sidebar {
-        margin-left: -40px; } }
-    @media only screen and (max-width: 37.5em) {
-      .header__sidebar {
-        grid-row: 9 / 10; } }
   .header__big {
     grid-row: 1 / 4;
     grid-column: 1 / -1;
     align-self: center;
     justify-self: center;
-    color: transparent;
+    color: #201f1c36;
+    text-shadow: 0px 0px 2px #201f1c6e;
     text-transform: uppercase;
     font-family: 'sui', sans-serif;
     letter-spacing: 6rem;
     margin-right: -6rem;
     font-size: 9.5rem;
     font-weight: 100;
-    background-image: url(https://media.giphy.com/media/xULW8tsT4LoKPqeyFW/giphy.gif);
+    background-image: url(https://media.giphy.com/media/Xs8yAZQYCI2oE/giphy.gif);
     background-position: center;
     background-size: contain;
     -webkit-background-clip: text; }
@@ -214,7 +199,7 @@ a {
     justify-self: center;
     align-self: center;
     font: 8rem "montserrat_bold", sans-serif;
-    color: #000;
+    color: #1F1E1C;
     margin: 3rem 0 -1rem 0; }
     @media only screen and (max-width: 50em) {
       .header__ideas {
@@ -228,7 +213,7 @@ a {
     justify-self: center;
     align-self: center;
     font: 8rem "montserrat_bold", sans-serif;
-    color: #000; }
+    color: #1F1E1C; }
     @media only screen and (max-width: 50em) {
       .header__brought {
         font-size: 7.5rem; } }
@@ -276,7 +261,7 @@ a {
   .reveal span {
     opacity: 0;
     animation: reveal 0.0001s linear forwards;
-    animation-delay: 1.4s; }
+    animation-delay: 1.5s; }
   .reveal::after {
     content: "";
     top: 0;
@@ -284,7 +269,7 @@ a {
     position: absolute;
     width: 0%;
     height: 110%;
-    background: #000;
+    background: #F84525;
     animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
     animation-delay: 1s; }
 
@@ -309,7 +294,7 @@ a {
   animation-delay: 2s; }
 
 #revTwo.reveal:after {
-  background: #000;
+  background: #F84525;
   animation-delay: 1.4s; }
 
 .bg-video {
