--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,33 +21,13 @@
     align-self: center;
     justify-self: center;
     margin-right: 4rem;
+    background: #f84525;
+    box-shadow: 0px 0px 0 4px #f84525;
+    padding: 3px 2px 1px 4px;
 
     @media only screen and (max-width: $bp-medium) {
       justify-self: start;
       align-self: start;
-    }
-  }
-
-  &__sidebar {
-    grid-row: 2/ 10;
-    grid-column: 1 / 2;
-    align-self: center;
-    transform: rotate(90deg);
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    font-size: 1.3rem;
-    color: $color-black;
-    opacity: 0.8;
-    width: 120px;
-    justify-self: start;
-    margin-left: -14px;
-
-    @media only screen and (max-width: $bp-medium) {
-      margin-left: -40px;
-    }
-
-    @media only screen and (max-width: $bp-small) {
-      grid-row: 9 / 10;
     }
   }
 
@@ -56,7 +36,8 @@
     grid-column: 1 / -1;
     align-self: center;
     justify-self: center;
-    color: transparent;
+    color: #201f1c36;
+    text-shadow: 0px 0px 2px #201f1c6e;
     text-transform: uppercase;
     font-family: 'sui', sans-serif;
     letter-spacing: 6rem;
@@ -65,7 +46,8 @@
     font-weight: 100;
     // opacity: 0.8;
     // text-shadow: 4px 2px 0px #051627;
-    background-image: url(https://media.giphy.com/media/xULW8tsT4LoKPqeyFW/giphy.gif);
+    background-image: url(https://media.giphy.com/media/Xs8yAZQYCI2oE/giphy.gif);
+
     background-position: center;
     background-size: contain;
     -webkit-background-clip: text;
@@ -99,7 +81,7 @@
     justify-self: center;
     align-self: center;
     font: 8rem "montserrat_bold", sans-serif;
-    color: $color-black;
+    color: $color-secondary;
     margin: 3rem 0 -1rem 0;
 
     @media only screen and (max-width: $bp-medium) {
@@ -117,7 +99,7 @@
     justify-self: center;
     align-self: center;
     font: 8rem "montserrat_bold", sans-serif;
-    color: $color-black;
+    color: $color-secondary;
 
     @media only screen and (max-width: $bp-medium) {
       font-size: 7.5rem;
@@ -188,7 +170,7 @@
   & span {
     opacity: 0;
     animation: reveal 0.0001s linear forwards;
-    animation-delay: 1.4s;
+    animation-delay: 1.5s;
   }
 
   &::after {
@@ -198,7 +180,7 @@
     position: absolute;
     width: 0%;
     height: 110%;
-    background: $color-black;
+    background: $color-primary;
     animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
     animation-delay: 1s;
   }
@@ -238,6 +220,6 @@
 }
 
 #revTwo.reveal:after {
-  background: $color-black;
+  background: $color-primary;
   animation-delay: 1.4s;
 }
