--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -98,8 +98,7 @@
   box-shadow: 0px 6px 0px 0px #051627;
 }
 
-.mb-md {
-}
+.mb-md {}
 
 .mb-lg {
   margin-bottom: 4rem;
@@ -113,4 +112,9 @@
   font-size: 2.2rem;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+.heading-5 {
+  margin-top: 2rem;
+  font-size: 2rem;
 }
