--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -38,10 +38,21 @@
 
   &__icon {
     fill: $color-primary;
-    width: 4.5rem;
-    height: 4.5rem;
+    width: 6.5rem;
+    height: 6.5rem;
     grid-row: 1 / span 2;
     transform: translateY(-1rem);
+    @media only screen and (max-width: $bp-medium) {
+      width: 4.5rem;
+      height: 4.5rem;
+    }
+  }
+
+  h4 {
+    font-size: 3rem;
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 2.5rem;
+    }
   }
 
   &__text {
