--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,6 +18,7 @@
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     height: 4.5rem;
+    width: 6rem;
     align-self: center;
     justify-self: center;
     margin-right: 4rem;
