--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ a {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     height: 4.5rem;
+    width: 6rem;
     align-self: center;
     justify-self: center;
     margin-right: 4rem; }
