fixed about section responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 .container {
   display: grid;
   background: #1f1e1c;
-  grid-template-rows: 100vh min-content 50vw;
+  grid-template-rows: 100vh min-content 60vw;
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 50em) {
     .container {
@@ -383,37 +383,15 @@ a {
   grid-column: full-start / col-end 4;
   background-image: url("../img/img2.jpg");
   background-size: cover;
-  background-position: right;
-  display: grid;
-  grid-template-rows: repeat(6, 1fr);
-  grid-template-columns: repeat(6, 1fr);
-  align-items: center; }
+  background-position: right; }
   @media only screen and (max-width: 62.5em) {
     .about__pictures {
       grid-column: 1 / -1;
       padding: 6rem;
-      height: 35vh; } }
-
-.about__img--1 {
-  width: 100%;
-  grid-row: 2 / 6;
-  grid-column: 2 / 6;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
-  @media only screen and (max-width: 62.5em) {
-    .about__img--1 {
-      grid-column: 1 / 5;
-      grid-row: 1 / -1; } }
-
-.about__img--2 {
-  width: 115%;
-  grid-row: 4 / 6;
-  grid-column: 4 / 7;
-  z-index: 20;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
-  @media only screen and (max-width: 62.5em) {
-    .about__img--2 {
-      grid-row: 1 / -1;
-      width: 100%; } }
+      height: 40vh; } }
+  @media only screen and (max-height: 37.5em) {
+    .about__pictures {
+      height: 100vh; } }
 
 .about__content {
   background-color: #f9f7f6;
