--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -2,47 +2,18 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
-    background-image:
-      url("../img/img2.jpg");
+    background-image: url("../img/img2.jpg");
     background-size: cover;
 
     background-position: right;
 
-    display: grid;
-    grid-template-rows: repeat(6, 1fr);
-    grid-template-columns: repeat(6, 1fr);
-    align-items: center;
-
     @media only screen and (max-width: $bp-large) {
       grid-column: 1 / -1;
       padding: 6rem;
-      height: 35vh;
+      height: 40vh;
     }
-  }
-
-  &__img--1 {
-    width: 100%;
-
-    grid-row: 2 / 6;
-    grid-column: 2 / 6;
-    box-shadow: 0 2rem 5rem rgba(#000, 0.1);
-
-    @media only screen and (max-width: $bp-large) {
-      grid-column: 1 / 5;
-      grid-row: 1 / -1;
-    }
-  }
-
-  &__img--2 {
-    width: 115%;
-    grid-row: 4 / 6;
-    grid-column: 4 / 7;
-    z-index: 20;
-    box-shadow: 0 2rem 5rem rgba(#000, 0.2);
-
-    @media only screen and (max-width: $bp-large) {
-      grid-row: 1 / -1;
-      width: 100%;
+    @media only screen and (max-height: $bp-small) {
+      height: 100vh;
     }
   }
 
