animation added to header

--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,25 @@ a {
   background: #f84525;
   animation-delay: 1.4s; }
 
+.main_btn {
+  opacity: 0;
+  animation: slideUp 1s forwards;
+  animation-delay: 4s; }
+
+.slideInUp {
+  -webkit-animation-name: slideUp;
+  animation-name: slideUp; }
+
+@keyframes slideUp {
+  0% {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    visibility: visible; }
+  100% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1; } }
+
 .bg-video {
   position: fixed;
   top: 0;
@@ -457,7 +476,7 @@ a {
         height: 4.5rem; } }
     @media only screen and (max-width: 25em) {
       .service__icon {
-        margin-top: 2rem; } }
+        margin-top: 1rem; } }
   .service h4 {
     font-size: 3rem; }
     @media only screen and (max-width: 50em) {
