added responsiveness to work section

--- a/css/style.css
+++ b/css/style.css
@@ -349,16 +349,16 @@ a {
   background-attachment: fixed; }
   @media only screen and (max-width: 37.5em) {
     .work {
-      grid-column: full-start / full-end;
-      padding: 10rem 5rem; } }
+      grid-row-gap: 2rem;
+      padding: 7rem 5rem; } }
   .work img {
     width: 100%; }
   @media only screen and (max-width: 37.5em) {
     .work h3 {
-      font-size: 4.6rem; } }
+      font-size: 7rem; } }
   @media only screen and (max-width: 25em) {
     .work h3 {
-      font-size: 4rem; } }
+      font-size: 5.2rem; } }
   .work__list {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -373,17 +373,23 @@ a {
     border-radius: 1%;
     display: block;
     margin-bottom: 3rem; }
+    @media only screen and (max-width: 50em) {
+      .work__img {
+        margin-bottom: 7rem; } }
   .work__details {
     color: #9299a0;
     font-size: 2rem;
     margin-bottom: 3rem; }
-    @media only screen and (max-width: 37.5em) {
+    @media only screen and (max-width: 50em) {
       .work__details {
-        margin-bottom: 4rem; } }
+        margin-bottom: 1rem; } }
     .work__details p {
       margin-top: 2rem;
       margin-bottom: 4rem;
       width: 80%; }
+      @media only screen and (max-width: 75em) {
+        .work__details p {
+          margin-bottom: 2rem; } }
       @media only screen and (max-width: 50em) {
         .work__details p {
           width: 90%; } }
