--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -19,8 +19,8 @@
   background-attachment: fixed;
 
   @media only screen and (max-width: $bp-small) {
-    grid-column: full-start / full-end;
-    padding: 10rem 5rem;
+    grid-row-gap: 2rem;
+    padding: 7rem 5rem;
   }
 
   img {
@@ -29,11 +29,11 @@
 
   h3 {
     @media only screen and (max-width: $bp-small) {
-      font-size: 4.6rem;
+      font-size: 7rem;
     }
 
     @media only screen and (max-width: $bp-xsSmall) {
-      font-size: 4rem;
+      font-size: 5.2rem;
     }
   }
 
@@ -56,6 +56,9 @@
     border-radius: 1%;
     display: block;
     margin-bottom: 3rem;
+    @media only screen and (max-width: $bp-medium) {
+      margin-bottom: 7rem;
+    }
   }
 
   &__details {
@@ -63,14 +66,17 @@
     font-size: 2rem;
     margin-bottom: 3rem;
 
-    @media only screen and (max-width: $bp-small) {
-      margin-bottom: 4rem;
+    @media only screen and (max-width: $bp-medium) {
+      margin-bottom: 1rem;
     }
 
     p {
       margin-top: 2rem;
       margin-bottom: 4rem;
       width: 80%;
+      @media only screen and (max-width: $bp-largest) {
+        margin-bottom: 2rem;
+      }
       @media only screen and (max-width: $bp-medium) {
         width: 90%;
       }
