--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -27,6 +27,9 @@
       justify-self: start;
       align-self: start;
     }
+    @media only screen and (max-height: $bp-xsSmall) {
+      display: none;
+    }
   }
 
   &__big {
@@ -75,6 +78,9 @@
     @media only screen and (max-width: $bp-xsSmall) {
       font-size: 4.5rem;
     }
+    @media only screen and (max-height: $bp-xsSmall) {
+      transform: translateY(1.5rem);
+    }
   }
 
   &__ideas {
@@ -117,6 +123,9 @@
 
     @media only screen and (max-width: $bp-xsSmall) {
       font-size: 4.4rem;
+    }
+    @media only screen and (max-height: $bp-xsSmall) {
+      transform: translateY(1.5rem);
     }
   }
 
@@ -215,12 +224,12 @@
 .main_btn {
   opacity: 0;
   animation: slideUp 1s forwards;
-  animation-delay: 4s
+  animation-delay: 4s;
 }
 
 .slideInUp {
   -webkit-animation-name: slideUp;
-  animation-name: slideUp
+  animation-name: slideUp;
 }
 
 @keyframes slideUp {
