--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: $color-secondary;
   grid-column: full-start / full-end;
-  padding: 5rem;
+  padding: 6rem 6rem 2rem;
 }
 
 .nav {
