--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,9 @@ a {
     .header {
       grid-column: 1 / -1;
       padding: 2rem; } }
+  @media only screen and (max-height: 26.25em) {
+    .header {
+      padding: 0; } }
   .header__logo {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
@@ -164,7 +167,7 @@ a {
       .header__logo {
         justify-self: start;
         align-self: start; } }
-    @media only screen and (max-height: 25em) {
+    @media only screen and (max-height: 26.25em) {
       .header__logo {
         display: none; } }
   .header__big {
@@ -202,10 +205,10 @@ a {
         letter-spacing: 1rem;
         margin-right: -1rem;
         font-size: 6rem; } }
-    @media only screen and (max-width: 25em) {
+    @media only screen and (max-width: 26.25em) {
       .header__big {
         font-size: 4.5rem; } }
-    @media only screen and (max-height: 25em) {
+    @media only screen and (max-height: 26.25em) {
       .header__big {
         transform: translateY(1.5rem); } }
   .header__ideas {
@@ -222,7 +225,7 @@ a {
     @media only screen and (max-width: 37.5em) {
       .header__ideas {
         font-size: 5.5rem; } }
-    @media only screen and (max-width: 25em) {
+    @media only screen and (max-width: 26.25em) {
       .header__ideas {
         font-size: 5rem; } }
   .header__brought {
@@ -238,10 +241,10 @@ a {
     @media only screen and (max-width: 37.5em) {
       .header__brought {
         font-size: 5.5rem; } }
-    @media only screen and (max-width: 25em) {
+    @media only screen and (max-width: 26.25em) {
       .header__brought {
         font-size: 4.4rem; } }
-    @media only screen and (max-height: 25em) {
+    @media only screen and (max-height: 26.25em) {
       .header__brought {
         transform: translateY(1.5rem); } }
   .header__typing {
@@ -260,6 +263,9 @@ a {
     align-self: center;
     padding: 2rem 3rem;
     justify-self: center; }
+    @media only screen and (max-height: 26.25em) {
+      .header a {
+        padding: 0; } }
 
 @keyframes appear {
   0% {
@@ -365,7 +371,7 @@ a {
   @media only screen and (max-width: 37.5em) {
     .work h3 {
       font-size: 7rem; } }
-  @media only screen and (max-width: 25em) {
+  @media only screen and (max-width: 26.25em) {
     .work h3 {
       font-size: 5.2rem; } }
   .work__list {
@@ -463,7 +469,7 @@ a {
   @media only screen and (max-width: 37.5em) {
     .services {
       grid-template-columns: repeat(auto-fit, minmax(26rem, 1fr)); } }
-  @media only screen and (max-width: 25em) {
+  @media only screen and (max-width: 26.25em) {
     .services {
       grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
       padding: 1rem; } }
@@ -489,7 +495,7 @@ a {
       .service__icon {
         width: 4.5rem;
         height: 4.5rem; } }
-    @media only screen and (max-width: 25em) {
+    @media only screen and (max-width: 26.25em) {
       .service__icon {
         margin-top: 1rem; } }
   .service h4 {
