--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,6 +13,9 @@
     grid-column: 1 / -1;
     padding: 2rem;
   }
+  @media only screen and (max-height: $bp-xsSmall) {
+    padding: 0;
+  }
 
   &__logo {
     grid-row: 1 / 2;
@@ -147,6 +150,10 @@
     align-self: center;
     padding: 2rem 3rem;
     justify-self: center;
+
+    @media only screen and (max-height: $bp-xsSmall) {
+      padding: 0;
+    }
   }
 
   @keyframes appear {
