--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: $color-white;
   grid-column: full-start / full-end;
-  background-image: url("hex.jpg");
+  background-image: url("../img/hex.jpg");
   background-size: cover;
   background-position: center;
   display: grid;
