--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -13,7 +13,7 @@
       $color-secondary,
       #1f1e1bad
     ),
-    url(work_bg.jpg);
+    url(../img/work_bg.jpg);
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed;
