--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,6 +9,12 @@
   grid-template-columns: repeat(10, 1fr);
   justify-items: center;
 
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
+    background-image: url("../img/hex.jpg");
+  }
+
   @media only screen and (max-width: $bp-medium) {
     grid-column: 1 / -1;
     padding: 2rem;
