--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,7 +21,7 @@
   }
 
   @media only screen and (max-width: $bp-small) {
-    background-size: contain;
+    background-position: right;
   }
 
   @media only screen and (max-height: $bp-xsSmall) {
