--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,8 @@ a {
         font-size: 7.5rem; } }
     @media only screen and (max-width: 37.5em) {
       .header__ideas {
-        font-size: 5.5rem; } }
+        font-size: 5.5rem;
+        margin: 0; } }
     @media only screen and (max-width: 26.25em) {
       .header__ideas {
         font-size: 5rem; } }
@@ -273,6 +274,9 @@ a {
     padding: 2rem 3rem;
     justify-self: center; }
     @media only screen and (max-height: 26.25em) {
+      .header a {
+        padding: 0; } }
+    @media only screen and (max-width: 26.25em) {
       .header a {
         padding: 0; } }
 
