--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -115,6 +115,7 @@
 
     @media only screen and (max-width: $bp-small) {
       font-size: 5.5rem;
+      margin: 0;
     }
 
     @media only screen and (max-width: $bp-xsSmall) {
@@ -166,6 +167,9 @@
     justify-self: center;
 
     @media only screen and (max-height: $bp-xsSmall) {
+      padding: 0;
+    }
+    @media only screen and (max-width: $bp-xsSmall) {
       padding: 0;
     }
   }
