--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -27,6 +27,9 @@
   @media only screen and (max-height: $bp-xsSmall) {
     padding: 0;
   }
+  @media only screen and (max-width: $bp-xsSmall) {
+    padding: 0;
+  }
 
   &__logo {
     grid-row: 1 / 2;
@@ -140,7 +143,7 @@
     }
 
     @media only screen and (max-width: $bp-xsSmall) {
-      font-size: 4.4rem;
+      font-size: 4.8rem;
     }
     @media only screen and (max-height: $bp-xsSmall) {
       transform: translateY(1.5rem);
