--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -17,7 +17,7 @@
       height: 40vh;
     }
     @media only screen and (max-height: $bp-small) {
-      height: 90vh;
+      height: 60vw;
     }
   }
 
