--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,9 @@ a {
     @media only screen and (max-width: 37.5em) {
       .header__ideas {
         font-size: 5.5rem;
-        margin: 0; } }
+        margin: 0;
+        grid-row: 4 / 6;
+        margin-bottom: 4rem; } }
     @media only screen and (max-width: 26.25em) {
       .header__ideas {
         font-size: 5rem; } }
@@ -253,7 +255,8 @@ a {
         font-size: 7.5rem; } }
     @media only screen and (max-width: 37.5em) {
       .header__brought {
-        font-size: 5.5rem; } }
+        font-size: 5.5rem;
+        margin-bottom: 4rem; } }
     @media only screen and (max-width: 26.25em) {
       .header__brought {
         font-size: 4.8rem; } }
@@ -301,7 +304,7 @@ a {
     left: 0;
     position: absolute;
     width: 0%;
-    height: 110%;
+    height: 128%;
     background: #f84525;
     animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
     animation-delay: 1s; }
