--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -10,8 +10,8 @@
   justify-items: center;
 
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    only screen and (min-width: 125em) {
+  only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+  only screen and (min-width: 125em) {
     background-image: url("../img/hex.jpg");
   }
 
@@ -27,6 +27,7 @@
   @media only screen and (max-height: $bp-xsSmall) {
     padding: 0;
   }
+
   @media only screen and (max-width: $bp-xsSmall) {
     padding: 0;
   }
@@ -44,9 +45,11 @@
       justify-self: start;
       align-self: start;
     }
+
     @media only screen and (max-height: $bp-xsSmall) {
       display: none;
     }
+
     @media only screen and (max-width: $bp-xsSmall) {
       display: none;
     }
@@ -98,6 +101,7 @@
     @media only screen and (max-width: $bp-xsSmall) {
       font-size: 4.5rem;
     }
+
     @media only screen and (max-height: $bp-xsSmall) {
       transform: translateY(1.5rem);
     }
@@ -119,6 +123,8 @@
     @media only screen and (max-width: $bp-small) {
       font-size: 5.5rem;
       margin: 0;
+      grid-row: 4 / 6;
+      margin-bottom: 4rem;
     }
 
     @media only screen and (max-width: $bp-xsSmall) {
@@ -140,11 +146,13 @@
 
     @media only screen and (max-width: $bp-small) {
       font-size: 5.5rem;
+      margin-bottom: 4rem;
     }
 
     @media only screen and (max-width: $bp-xsSmall) {
       font-size: 4.8rem;
     }
+
     @media only screen and (max-height: $bp-xsSmall) {
       transform: translateY(1.5rem);
     }
@@ -172,6 +180,7 @@
     @media only screen and (max-height: $bp-xsSmall) {
       padding: 0;
     }
+
     @media only screen and (max-width: $bp-xsSmall) {
       padding: 0;
     }
@@ -204,7 +213,7 @@
     left: 0;
     position: absolute;
     width: 0%;
-    height: 110%;
+    height: 128%;
     background: $color-primary;
     animation: revealing 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
     animation-delay: 1s;
