--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ a {
     margin-right: -6rem;
     font-size: 9rem;
     font-weight: 100;
-    background-image: url(https://media.giphy.com/media/Xs8yAZQYCI2oE/giphy.gif);
+    background-image: url(../img/giphy.webp);
     background-position: center;
     background-size: contain;
     -webkit-background-clip: text; }
