--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -10,8 +10,8 @@
   justify-items: center;
 
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-  only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-  only screen and (min-width: 125em) {
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
     background-image: url("../img/hex.jpg");
   }
 
@@ -70,7 +70,7 @@
     font-weight: 100;
     // opacity: 0.8;
     // text-shadow: 4px 2px 0px #051627;
-    background-image: url(https://media.giphy.com/media/Xs8yAZQYCI2oE/giphy.gif);
+    background-image: url(../img/giphy.webp);
 
     background-position: center;
     background-size: contain;
