fixed aos issues

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -70,7 +70,7 @@
     font-weight: 100;
     // opacity: 0.8;
     // text-shadow: 4px 2px 0px #051627;
-    background-image: url(../img/giphy.webp);
+    // background-image: url(../img/giphy.webp);
 
     background-position: center;
     background-size: contain;
