--- a/css/style.css
+++ b/css/style.css
@@ -237,8 +237,7 @@ a {
       .header__ideas {
         font-size: 5.5rem;
         margin: 0;
-        grid-row: 4 / 6;
-        margin-bottom: 4rem; } }
+        grid-row: 4 / 6; } }
     @media only screen and (max-width: 26.25em) {
       .header__ideas {
         font-size: 5rem; } }
@@ -254,8 +253,7 @@ a {
         font-size: 7.5rem; } }
     @media only screen and (max-width: 37.5em) {
       .header__brought {
-        font-size: 5.5rem;
-        margin-bottom: 4rem; } }
+        font-size: 5.5rem; } }
     @media only screen and (max-width: 26.25em) {
       .header__brought {
         font-size: 4.8rem; } }
