--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,9 @@ a {
   .heading-4--dark {
     color: #fff; }
 
+.heading-4 a {
+  color: #f84525; }
+
 .btn {
   background-color: #f84525;
   color: #fff;
@@ -195,6 +198,8 @@ a {
     margin-right: -6rem;
     font-size: 9rem;
     font-weight: 100;
+    opacity: 0.8;
+    background-image: url(../img/giphy.webp);
     background-position: center;
     background-size: contain;
     -webkit-background-clip: text; }
@@ -451,8 +456,8 @@ a {
     .about__pictures {
       grid-column: 1 / -1;
       padding: 6rem;
-      height: 40vh; } }
-  @media only screen and (max-height: 37.5em) {
+      height: 50vh; } }
+  @media only screen and (max-height: 26.25em) {
     .about__pictures {
       height: 60vw; } }
 
