--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -7,16 +7,18 @@
     background-position: right;
 
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
-      only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-      only screen and (min-width: 125em) {
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
       background-image: url("../img/img2.jpg");
     }
+
     @media only screen and (max-width: $bp-large) {
       grid-column: 1 / -1;
       padding: 6rem;
-      height: 40vh;
+      height: 50vh;
     }
-    @media only screen and (max-height: $bp-small) {
+
+    @media only screen and (max-height: $bp-xsSmall) {
       height: 60vw;
     }
   }
